--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ aiohttp
 python-decouple
 psutil
 tgcrypto
+lxml_html_clean
 https://github.com/New-dev0/Telethon/archive/diamond.zip
 git+https://github.com/kaif-00z/html-telegraph-poster
